--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
         </g>
         </svg>
 
+        <h1 class="mobile-headline">
+          PAW PRINT KENNELS
+        </h1>
 
         <h1>
           Pembroke Welsh Corgi
