nav-location size
removed class nav-icon and added separate ids for the 3 icons. Used ids
to set icon size (location is slightly different dimensions from other
two)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a href="#"> 
                 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-                <svg class="nav-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                <svg id="nav-heart" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                    viewBox="0 0 28 24" style="enable-background:new 0 0 28 24;" xml:space="preserve">
                 <style type="text/css">
                   .st0{fill:#39ADD1;}
@@ -36,7 +36,7 @@
               <a href="#">
                 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-                <svg class="nav-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                <svg id="nav-location" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                    viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
                 <style type="text/css">
                   .st0{fill:#39ADD1;}
@@ -52,7 +52,7 @@
               <a href="#">
                 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-                <svg class="nav-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                <svg id="nav-contact" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                    viewBox="0 0 28 24" style="enable-background:new 0 0 28 24;" xml:space="preserve">
                 <style type="text/css">
                   .st0{fill:#39ADD1;}
