--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
           </ul>
         </nav>
 
+        <h1 class="mobile-headline">
+          Paw Print Kennels
+        </h1>
         
         <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
            viewBox="0 0 140 120" style="enable-background:new 0 0 140 120;" xml:space="preserve">
@@ -117,7 +120,7 @@
             c0.1-1.6,0.5-2.8,1.3-3.7c0.7-0.9,1.7-1.2,2.9-1.1l0.1,0l-0.2,2.9c-0.6,0-1,0.1-1.3,0.5c-0.3,0.4-0.4,0.9-0.5,1.6
             c0,0.7,0,1.2,0.2,1.5C130.4,76,130.7,76.2,131,76.3z"/>
         </g>
-        <g>
+        <g id="logo-paw">
           <path class="st2" d="M80.4,45.2c0,5.7-4.6,6.8-10.3,6.8c-5.7,0-10.3-1.1-10.3-6.8S64.4,35,70.1,35C75.8,35,80.4,39.6,80.4,45.2z"/>
           <path class="st2" d="M45.7,83.1C45.7,69.7,56.7,65,70.1,65s24.4,4.7,24.4,18.1s-15.1,21.6-24.4,21.6
             C61.2,104.7,45.7,96.5,45.7,83.1z"/>
@@ -125,10 +128,6 @@
           <path class="st2" d="M51.5,49.6c4,4,1.5,8-2.5,12c-4,4-8.1,6.5-12.1,2.5c-4-4-4-10.5,0-14.5S47.4,45.6,51.5,49.6z"/>
         </g>
         </svg>
-
-        <h1 class="mobile-headline">
-          Paw Print Kennels
-        </h1>
 
         <h1>
           Pembroke Welsh Corgi
